# tt-ig-downloader

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  ttdl.py  ttigdl.py
.github/workflows/: ci.yml
docs/: demo_run.sh
tests/: test_ttdl.py  test_ttigdl.py
